--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,17 +5,19 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.pratamawijaya.blogreaderkotlin.presentation.ui.home.MainActivity"
     >
-
-  <Button
-      android:id="@+id/btnHello"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:text="Hello"
+  <ProgressBar
+      android:id="@+id/loading"
+      android:layout_width="70dp"
+      android:layout_height="70dp"
+      android:layout_centerInParent="true"
+      android:visibility="gone"
       />
+  <android.support.v7.widget.RecyclerView
+      android:id="@+id/rvContent"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      />
+
 </RelativeLayout>
