--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,23 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.pratamawijaya.blogreaderkotlin.presentation.ui.home.MainActivity"
-    >
-  <ProgressBar
-      android:id="@+id/loading"
-      android:layout_width="70dp"
-      android:layout_height="70dp"
-      android:layout_centerInParent="true"
-      android:visibility="gone"
-      />
-  <android.support.v7.widget.RecyclerView
-      android:id="@+id/rvContent"
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      />
+    tools:context="com.pratamawijaya.blogreaderkotlin.presentation.ui.home.MainActivity">
+
+    <ProgressBar
+        android:id="@+id/loading"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_centerInParent="true"
+        android:visibility="gone" />
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rvContent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scrollbars="vertical" />
 
 </RelativeLayout>
